--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,4 @@ include:
     shield: splitkb_aurora_sweep_left
   - board: nice_nano_v2
     shield: splitkb_aurora_sweep_right
+    snippet: zmk-usb-logging
