--- a/build.yaml
+++ b/build.yaml
@@ -20,7 +20,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: splitkb_aurora_sweep_left
+    shield: nic_keyboard_left
   - board: nice_nano_v2
-    shield: splitkb_aurora_sweep_right
+    shield: nic_keyboard_right
     snippet: zmk-usb-logging
