--- a/build.yaml
+++ b/build.yaml
@@ -25,3 +25,7 @@ include:
     shield: nic_keyboard_right
   - board: nice_nano_v2
     shield: settings_reset
+  - board: nice_nano_v2
+    shield: corne_left
+  - board: nice_nano_v2
+    shield: corne_right
