--- a/build.yaml
+++ b/build.yaml
@@ -27,5 +27,6 @@ include:
     shield: settings_reset
   - board: nice_nano_v2
     shield: corne_left
+    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: corne_right
