--- a/build.yaml
+++ b/build.yaml
@@ -26,6 +26,6 @@ include:
   - board: nice_nano_v2
     shield: settings_reset
   - board: nice_nano_v2
-    shield: corne_left
+    shield: cradio_left
   - board: nice_nano_v2
-    shield: corne_right
+    shield: cradio_right
